Diversified the download route, it was divided into two: - Download route - Get replay's info route Updated DOCS and bug fixes.
