# docs/swagger.json
@@ -483,23 +483,20 @@
         "tags": [
           "replay"
         ],
-        "summary": "Find a replay by ID.",
-        "description": "Downloads the zip file of the replay and writes in the response its information.",
-        "produces": [
-          "application/zip"
-        ],
+        "summary": "Finds a replay by ID.",
+        "description": "Gives information about a specific replay.",
         "parameters": [
           {
             "name": "replayId",
             "in": "path",
-            "description": "ID of the replay to download.",
+            "description": "ID of the replay to get information.",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully downloaded the replay requested in its zip format.",
+            "description": "Successfully retrieved the information of the replay requested.",
             "schema": {
               "type": "object",
               "properties": {
@@ -530,7 +527,7 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "Successfully downloaded: REPLAY-fSab-compressed.zip"
+                  "example": "Successfully retrieved information."
                 },
                 "status": {
                   "type": "string",
@@ -557,6 +554,42 @@
                   "example": "error"
                 }
               }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/replay/download/{replayId}": {
+      "get": {
+        "tags": [
+          "replay"
+        ],
+        "summary": "Downloads a replay by ID.",
+        "description": "Downloads, as an attachment, a specific replay.",
+        "produces": [
+          "application/zip"
+        ],
+        "parameters": [
+          {
+            "name": "replayId",
+            "in": "path",
+            "description": "ID of the replay to download.",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully downloaded the replay requested.",
+            "schema": {
+              "type": "file"
+            }
+          },
+          "404": {
+            "description": "The replay requested to be downloaded could not be found in the local database.",
+            "schema": {
+              "type": "string",
+              "example": "sendfile: file .\\replays-storage\\REPLAY-{replayId}-compressed.zip not found"
             }
           }
         }
@@ -604,13 +637,19 @@
             }
           },
           "400": {
-            "description": "Could not delete or find the file.",
+            "description": "Could not delete or find the file. **Note**: status code **400** will be returned ignoring the result of the mongo deletions.",
             "schema": {
               "type": "object",
               "properties": {
                 "data": {
-                  "type": "string",
-                  "example": "REPLAY-{replayId}-compressed.zip"
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  },
+                  "example": [
+                    "Successfully removed replayID from the replays collection.",
+                    "Successfully removed 2 replayIDs from player trackers."
+                  ]
                 },
                 "message": {
                   "type": "string",
