# main.go
@@ -37,6 +37,7 @@ func Routes(app *fiber.App) {
 
 	app.Get("/api/v1/replay", network.GetReplays)
 	app.Get("/api/v1/replay/:id", network.GetReplay)
+	app.Get("/api/v1/replay/download/:id", network.DownloadReplay)
 	app.Post("/api/v1/replay", network.AddReplay)
 	app.Post("/api/v1/player", network.AddPlayer)
 	app.Get("/api/v1/player/:name", network.GetPlayerReplays)
